--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ header {
   padding: 10px 0 10px;
   margin: 20px auto 20px;
   text-align: center;
+  max-width: 1440px;
 
   @media (min-width: 520px) {
     font-size: large;
@@ -198,6 +199,7 @@ header {
   width: 90%;
   margin: 10px auto 30px;
   text-align: center;
+  max-width: 1440px;
 
   & h2 {
     color: #023047;
@@ -221,6 +223,8 @@ header {
   margin-bottom: 10px;
   padding: 10px;
   gap: 20px;
+  max-width: 1440px;
+  margin: auto;
 
   
   & section {
